// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsCloud should render correctly with active tag (snapshot) 1`] = `
<div>
  <div>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(245, 159, 0);"
    >
      <a
        href="/tag/JavaScript"
      >
        JavaScript
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        href="/tag/Web%20Development"
      >
        Web Development 30
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        href="/tag/Frontend%20Development"
      >
        Frontend Development 20
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        href="/tag/React"
      >
        React 5
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        href="/tag/Redux"
      >
        Redux 1
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(24, 144, 255);"
    >
      <a
        href="/tags"
      >
        All
      </a>
    </span>
  </div>
</div>
`;

exports[`TagsCloud should render correctly without active tag (snapshot) 1`] = `
<div>
  <div>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(112, 72, 232);"
    >
      <a
        href="/tag/Web%20Development"
      >
        Web Development 30
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(55, 178, 77);"
    >
      <a
        href="/tag/Frontend%20Development"
      >
        Frontend Development 20
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(245, 159, 0);"
    >
      <a
        href="/tag/JavaScript"
      >
        JavaScript 10
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(24, 144, 255);"
    >
      <a
        href="/tag/React"
      >
        React 5
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-1 text-base font-extrabold md:mb-3 md:text-lg"
      style="background-color: rgb(24, 144, 255);"
    >
      <a
        href="/tag/Redux"
      >
        Redux 1
      </a>
    </span>
  </div>
</div>
`;
